Neue Methoden in SBVRTransformer hinzugefügt um verschiedene Symbole zu erkennen